tests/paczka1/small_fuzzy/90061654.err
Error in line 3: ehJGE6gC2o4 A528 10,4
Error in line 6: JJokJR A743 41,5
Error in line 9: A743 A528 81,9
